--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
         <title>Akan Names</title>
         <meta charset="utf-8">
         <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <link href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
      </head>
+       <body> 
+           <h1>Akan Names</h1>
+             <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+
+       </body>
 </html>
