--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <link href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
      </head>
        <body> 
+           <div class="jumbotron">
            <h1>Akan Names</h1>
+           </div>
              <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
-
-       </body>
+            <p>In this application you will get to know you Akan name by simply filling you birthday and the gender.</p> 
+              
+        </body>
 </html>
