--- a/index.html
+++ b/index.html
@@ -3,12 +3,42 @@
     <head>
         <title>Akan Names</title>
         <meta charset="utf-8">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
-        <link href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="css/styles.css" rel="stylesheet" type="text/css"
+              href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
      </head>
-       <body> 
-           <h1>Akan Names</h1>
-             <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
-
-       </body>
+       <body>
+         <div class="container">
+         <div class="jumbotron">
+         <h1>Akan Names</h1>
+         </div>
+           <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
+           <p>Akan calculator finds the day you where born and the coresponding Akan name based on the date of birth. It is an online calender tool specially programmed to find the exact Akan name of a person or an animal.</p>
+        <fieldset>
+        <legend>Get your Akan name...</legend>
+          <br/>
+          <label>First name:</label> 
+          <br/>
+            <input type="text" id="first name" name="first name" placeholder="firstname">
+          <br/>
+          <label>Last name:</label>
+          <br/>
+            <input type="text" id="lastname" name="lastname" placeholder="last name">
+          <br/>
+          <label>Date of birth:</label>
+          <br/>
+            <input type="date" id="date" name="date" value="date">
+          <br/>
+           Gender:
+          <label>Female:</label>    
+            <input type="radio" id="female" name="gender" value="f"> 
+          <label>Male:</label>
+            <input type="radio" id="male" name="male" value="m"> 
+          </br>
+            <input type="button" id="submit" name="calculator" value="calculate">
+          <p>How did you like the app?</p>
+            <textarea name="comments" cols="20" rows="10">Enter your comments..</textarea>
+        </form>
+        </fieldset>
+        </div>
+      </body>
 </html>
