add bootstrap styles

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <fieldset>
         <legend>Get your Akan name...</legend>
           <br/>
+          <div class="rows">
           <label>First name:</label> 
           <br/>
             <input type="text" id="first name" name="first name" placeholder="firstname">
@@ -39,6 +40,7 @@
             <textarea name="comments" cols="20" rows="10">Enter your comments..</textarea>
         </form>
         </fieldset>
-        </div>
+       </div>
+      </div> 
       </body>
 </html>
