--- a/index.html
+++ b/index.html
@@ -3,20 +3,21 @@
     <head>
         <title>Akan Names</title>
         <meta charset="utf-8">
-        <link href="css/styles.css" rel="stylesheet" type="text/css"
-              href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
+        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <link href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
      </head>
        <body>
-         <div class="container">
-         <div class="jumbotron">
+         <img src="images/background.png" alt="background image">
          <h1>Akan Names</h1>
-         </div>
+         <script src="js/javaScripts.js"></script>
            <p>Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
            <p>Akan calculator finds the day you where born and the coresponding Akan name based on the date of birth. It is an online calender tool specially programmed to find the exact Akan name of a person or an animal.</p>
         <fieldset>
+          <div class="container">
         <legend>Get your Akan name...</legend>
           <br/>
-          <div class="rows">
+        <div class="row">
+          <div class="col-md-6">
           <label>First name:</label> 
           <br/>
             <input type="text" id="first name" name="first name" placeholder="firstname">
@@ -36,11 +37,16 @@
             <input type="radio" id="male" name="male" value="m"> 
           </br>
             <input type="button" id="submit" name="calculator" value="calculate">
+        </div>
+        <div class="col-md-6">
           <p>How did you like the app?</p>
-            <textarea name="comments" cols="20" rows="10">Enter your comments..</textarea>
+            <textarea name="comments" cols="10" rows="5" placeholder="Enter your comments...">
+         </textarea>
+         <input type="button" id="submit" name="comments" value="feedback">
+         </div>
+         </div>
+         </div>
         </form>
-        </fieldset>
-       </div>
-      </div> 
+      </fieldset>
       </body>
 </html>
