add backgroung image

--- a/index.html
+++ b/index.html
@@ -109,20 +109,20 @@
                       <div class="form-group">
                         <label>Day of birth</label>
                         <input type="number" class="form-control" id="day"  placeholder="enter day">
-                        <small id="showday" class="form-text text-muted">enter day of birth e.g 2</small>
+                        <small id="showday" style=color:blue; class="form-text text-muted">enter day of birth e.g 2</small>
                         <small id="dayError" style="color: red; font-size: 12px;"></small>
                       </div>
                       <div class="form-group">
                         <label>Month of birth</label>
                         <input type="number" class="form-control" id="month" placeholder="enter month">
-                        <small id="showmonth" class="form-text text-muted">Enter month e.g 1,12</small>
+                        <small id="showmonth" style=color:blue; class="form-text text-muted">Enter month e.g 1,12</small>
                         <small id="monthError" style="color: red; font-size: 12px;"></small>
 
                       </div>
                       <div class="form-group">
                         <label>Year of birth</label>
                         <input type="number" class="form-control" id="year" placeholder="enter year">
-                        <small id="showyear" class="form-text text-muted">enter year e.g 1994</small>
+                        <small id="showyear" style=color:blue; class="form-text text-muted">enter year e.g 1994</small>
                         <small id="yearError" style="color: red; font-size: 12px;"></small>
                       </div>
                       <div class="form-check">
