--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <title>Akan Names</title>
         <meta charset="utf-8">
-        <link href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css">
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
+        <link href="css/bootstrap.css/css/bootstrap.css" rel="stylesheet" type="text/css" media="screen">
+        <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">
      </head>
        <body>
          <div class="jumbotron">
@@ -108,7 +108,7 @@
                       <div class="form-group">
                         <label>Day of birth</label>
                         <input type="number" class="form-control" id="day"  placeholder="enter day">
-                        <small id="showday" style=color:blue; class="form-text text-muted">enter day of birth e.g 2</small>
+                        <small id="showday" style=color:blue; class="form-text text-muted">enter day of birth e.g 1,2</small>
                         <small id="dayError" style="color: red; font-size: 12px;"></small>
                       </div>
                       <div class="form-group">
@@ -121,11 +121,11 @@
                       <div class="form-group">
                         <label>Year of birth</label>
                         <input type="number" class="form-control" id="year" placeholder="enter year">
-                        <small id="showyear" style=color:blue; class="form-text text-muted">enter year e.g 1994</small>
+                        <small id="showyear" style=color:blue; class="form-text text-muted">enter year e.g 2020</small>
                         <small id="yearError" style="color: red; font-size: 12px;"></small>
                       </div>
                       <div class="form-check">
-                        <input class="form-check-input" type="radio" name="exampleRadios" id="male" value="male" checked>
+                        <input class="form-check-input" type="radio" name="exampleRadios" id="male" value="male" >
                         <label class="form-check-label" for="exampleRadios1">
                           Male
                         </label>
@@ -143,7 +143,7 @@
               </div>
             <div class="col-md-2">
           <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading" >Provide the required fields to view your akhan name</h4>
+            <h4 class="alert-heading" >Provide the required fields to view your akan name</h4>
             <p id="show"></p>
             <hr>
             <p id="showAkan"></p>
