add little changes

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <div class="row">
                     <form>
                       <div class="form-group">
+                      <div id="myForm">
                         <label>Day of birth</label>
                         <input type="number" class="form-control" id="day"  placeholder="enter day">
                         <small id="showday" style=color:blue; class="form-text text-muted">enter day of birth e.g 1,2</small>
@@ -141,6 +142,7 @@
                   </div>
                 </div>
               </div>
+          </div>
             <div class="col-md-2">
           <div class="alert alert-success" role="alert">
             <h4 class="alert-heading" >Provide the required fields to view your akan name</h4>
