--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
          <div class="jumbotron">
           <h1 class="display-4">Welcome to your Akan Name Generator</h1>
           <p class="lead">Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
-          <p>Akan calculator finds the day you where born and the coresponding Akan name based on the date of birth. It is an online calender tool specially programmed to find the exact Akan name of a person or an animal.</p>
+          <p>Akan calculator finds the day you where born and the coresponding Akan name based on the date of birth. It is an online calender tool specially programmed to find the exact Akan name of a person or an animal. You have been provided with a reference table to compare.</p>
         </div>
         <div class="continer">
           <div class="row">
