--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
           <p class="lead">Akan names are derived from Ghanian culture. Frequently in Ghana, children are given their first name as a 'day name' which corresponds to the day in the week they were born.</p>
           <p>Akan calculator finds the day you where born and the coresponding Akan name based on the date of birth. It is an online calender tool specially programmed to find the exact Akan name of a person or an animal. You have been provided with a reference table to compare.</p>
         </div>
-        <div class="continer">
+        <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <div class="container">
-                <div class="row">
-                 <div class="col-md-6" >
-                    <h1 style="font-size: 29px;color: green;">Male Akan Name</h1>
+                 <div class="col-md-3" >
+                    <h1 style="font-size: 29px;color: green; text-align: center;">Male Akan Name</h1>
                     <table class="table">
                       <thead>
                         <tr>
@@ -57,8 +54,8 @@
                       </tbody>
                     </table>
                   </div>
-                  <div class="col-md-6" >
-                    <h1 style="font-size: 29px; color: purple;">Female Akan Name</h1>
+                  <div class="col-md-3" >
+                    <h1 style="font-size: 29px; color: purple; text-align: center;">Female Akan Name</h1>
                     <table class="table">
                       <thead>
                         <tr>
@@ -98,12 +95,9 @@
                        </tbody>
                     </table>
                   </div>
-                </div>
-              </div>
-            </div>
-            <div class="row">
             <div class="col-md-3">
-              <div class="container">
+              <h1 style="font-size: 29px;color: green; text-align: center;">Fill in the form</h1>
+              <hr>
                     <form>
                       <div class="form-group">
                       <div id="myForm">
@@ -140,17 +134,14 @@
                       <button onclick="myAkangenerator();return false" type="submit" class="btn btn-primary">Submit</button>
                     </form>
                   </div>
-                </div>
-              </div>
-          </div>
-            <div class="col-md-2">
+            <div class="col-md-3">
           <div class="alert alert-success" role="alert">
             <h4 class="alert-heading" >Provide the required fields to view your akan name</h4>
             <p id="show"></p>
             <hr>
             <p id="showAkan"></p>
           </div>
-        </div>
+           </div>
       </div>
     </div>
   </body>
