--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <div class="row">
                  <div class="col-md-3" >
                     <h1 style="font-size: 29px;color: green; text-align: center;">Male Akan Name</h1>
+                    <br>
                     <table class="table">
                       <thead>
                         <tr>
@@ -56,6 +57,7 @@
                   </div>
                   <div class="col-md-3" >
                     <h1 style="font-size: 29px; color: purple; text-align: center;">Female Akan Name</h1>
+                    <br>
                     <table class="table">
                       <thead>
                         <tr>
@@ -96,7 +98,7 @@
                     </table>
                   </div>
             <div class="col-md-3">
-              <h1 style="font-size: 29px;color: green; text-align: center;">Fill in the form</h1>
+              <h1 style="font-size: 29px;color: green; text-align: center;">Provide the required fields to view your akan name</h1>
               <hr>
                     <form>
                       <div class="form-group">
@@ -131,12 +133,13 @@
                          Female
                         </label>
                       </div>
-                      <button onclick="myAkangenerator();return false" type="submit" class="btn btn-primary">Submit</button>
+                      <button onclick="myAkangenerator();return false" type="submit" class="btn btn-success">Submit</button>
                     </form>
                   </div>
+          </div>
             <div class="col-md-3">
           <div class="alert alert-success" role="alert">
-            <h4 class="alert-heading" >Provide the required fields to view your akan name</h4>
+            <h4 class="alert-heading" >View your akan name here!</h4>
             <p id="show"></p>
             <hr>
             <p id="showAkan"></p>
